# novizna_fingerprint_app

./: .gitignore  app.py  just.py  just_2.py  libzkfp.cp39-win_amd64.pyd  main.py  migrate.py  models.py  notify.py  pyproject.toml  test.py  ui.py
main.onefile-build/: scons-report.txt
ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.vue  env.d.ts  main.ts  shims-vue.d.ts
ui/src/api/: responses.ts
ui/src/assets/: waiting.json
ui/src/components/: Dummy.vue  FingerPrint.vue  Lottie.vue
ui/src/router/: index.ts
ui/src/store/: index.ts
ui/src/utils/: api.ts  enums.ts  lottie.ts
ui/src/views/: Home.vue  SetupView.vue
zk/: __init__.py
